# Mustache

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  appveyor.yml  build.bat  build.sh  mustache.hpp  tests.cpp
.github/workflows/: mustache.yml  tests.yml
Mustache/: main.cpp
Mustache.xcodeproj/: project.pbxproj
Mustache.xcodeproj/project.xcworkspace/xcuserdata/kainjow.xcuserdatad/: UserInterfaceState.xcuserstate
Mustache.xcodeproj/xcuserdata/kainjow.xcuserdatad/xcschemes/: Mustache.xcscheme  xcschememanagement.plist
example/: CMakeLists.txt  main.cpp
tests/: .gitignore  CMakeLists.txt  Makefile  README.md  tests.cpp
